# hackathon_ai_agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  presentation.md  pyproject.toml  script.sh
src/agentic/: agentic_config.py
src/kodo_template/: crew.py  main.py
src/kodo_template/config/: agents.yaml  tasks.yaml
src/kodo_template/tools/: json_downloader.py
